--- a/index.html
+++ b/index.html
@@ -1894,10 +1894,10 @@
         <div class="nav-wrap nav-wrap-repair">
           <nav class="nav-popup nav-popup-repair-types transparancy-cut">
             <div class="nav-list nav-list-popup-repair">
-              <button class="button_o popup-repair-types-nav__item active">Потолок: Демонтажные работы</button>
-              <button class="button_o popup-repair-types-nav__item">Потолок: Монтажные работы</button>
+              <!-- <button class="button_o popup-repair-types-nav__item active">Потолок: Демонтажные работы</button> -->
+              <!-- <button class="button_o popup-repair-types-nav__item">Потолок: Монтажные работы</button>
               <button class="button_o popup-repair-types-nav__item">Стены: Демонтажные работы</button>
-              <button class="button_o popup-repair-types-nav__item">Стены: Монтажные работы</button>
+              <button class="button_o popup-repair-types-nav__item">Стены: Монтажные работы</button> -->
             </div>
           </nav><!-- /.repair-types__nav -->
           <div class="nav-arrow nav-arrow_left desktop-hide" id="nav-arrow-popup-repair_left">
@@ -1935,8 +1935,8 @@
                 <td class="repair-types-name">Очистка потолка от побелки, краски,водоэмульсионки</td>
                 <td class="mobile-col-title tablet-hide desktop-hide">Ед.измерения</td>
                 <td class="mobile-col-title tablet-hide desktop-hide">Цена за ед.</td>
-                <td class="repair-types-value">м<sup>2</sup></td>
-                <td class="repair-types-value">130 руб.</td>
+                <td class="repair-types-value customUnit">м<sup>2</sup></td>
+                <td class="repair-types-value customValue">130 руб.</td>
               </tr>
               <tr class="mobile-row">
                 <td class="repair-types-name">Очистка потолка от обоев</td>
